src/app/home/nav-bar/nav-bar.component.scss
@mixin animated{
  transition: all 0.6s ease-in;
}

#navbar-root {
  @include animated;
  position: sticky;
  top: 0;
  height: 64px;
  background: white;

  & *{
    @include animated;
  }

  &.expanded{
    opacity: 0;

    #content{
    }
  }

  #content{
    display: flex;
    height: 100%;

    hr{
      align-self: end;
      flex-grow: 1;
      margin-bottom: 0px;
    }
  }
}

